WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107063
[soup] Fix build warning in ResourceHandleSoup.cpp
https://bugs.webkit.org/show_bug.cgi?id=107063
Summary
[soup] Fix build warning in ResourceHandleSoup.cpp
dh-kim
Reported
2013-01-16 16:42:39 PST
The restartedCallback has unused parameter 'message', comment out it to fix 'unused parameter' build warning. Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp:378:13: warning: unused parameter 'message' [-Wunused-parameter]
Attachments
Patch
(1.59 KB, patch)
2013-01-16 16:49 PST
,
dh-kim
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
dh-kim
Comment 1
2013-01-16 16:49:07 PST
Created
attachment 183062
[details]
Patch
WebKit Review Bot
Comment 2
2013-01-16 17:48:37 PST
Comment on
attachment 183062
[details]
Patch
Attachment 183062
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/15914566
New failing tests: inspector-protocol/debugger-terminate-dedicated-worker-while-paused.html
WebKit Review Bot
Comment 3
2013-01-16 18:21:48 PST
Comment on
attachment 183062
[details]
Patch Clearing flags on attachment: 183062 Committed
r139946
: <
http://trac.webkit.org/changeset/139946
>
WebKit Review Bot
Comment 4
2013-01-16 18:21:52 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug