[soup] Fix build warning in ResourceHandleSoup.cpp https://bugs.webkit.org/show_bug.cgi?id=107063

Patch by Donghyun Kim <dhkim715@hotmail.com> on 2013-01-16
Reviewed by Martin Robinson.

The restartedCallback has unused parameter 'message',
remove the parameter name to fix 'unused parameter' build warning.

* platform/network/soup/ResourceHandleSoup.cpp:
(WebCore::restartedCallback):

Canonical link: https://commits.webkit.org/125321@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139946 268f45cc-cd09-0410-ab3c-d52691b4dbfc